0.15.2:

2009-09-18  Daniel Elstner  <danielk@openismus.com>

	Add missing tag files and update Doxygen config

	* configure.ac (MM_ARG_WITH_TAGFILE_DOC): Reference the installed
	Doxygen tag files of cairomm, pangomm and gtkmm.
	* doc/reference/Doxyfile.in: Update configuration for Doxygen 1.6.1.
	(SORT_MEMBERS_CTORS_1ST): Set to YES.
	(EXCLUDE_SYMBOLS): Remove bogus Skeleton* symbols from the list.
	(EXAMPLE_*): Correct the accidentally substituted variable names.
	(EXAMPLE_PATH): Point to the examples/ source directory.
	(EXAMPLE_RECURSIVE): Set to YES.
	(PREDEFINED): Define GTKMM_ATKMM_ENABLED, just in case.

2009-09-18  Daniel Elstner  <danielk@openismus.com>

	Insert missing comma to separate M4 macro args

	* configure.ac (GOOCANVASMM_WXXFLAGS): Insert missing comma to
	separate the fourth macro argument from the third.  This means
	the deprecation macros are now defined again in fatal warnings
	mode.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	goocanvasmmconfig.h: Make this work.

	* goocanvas/goocanvasmmconfig.h.in: Use actual GOOCANVASMM values,
	instead of being a copy of the file from libgdamm. Noticed by
	Daniel Elstner.

2009-09-17  Murray Cumming  <murrayc@murrayc.com>

	Do not put a generated ChangeLog in the tarball.

	* Makefile.am: Remove the include of dist-changelog.am becaise I do not
	want some crappy generated ChangeLog based on random vague commit
	messages that can't be corrected later. I fight entropy. murrayc.

0.15.1:

2009-09-14  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/goocanvasmm/init.cc:
	* goocanvas/src/linedash.hg: Fix some warnings found during distcheck.

2009-08-24  Murray Cumming  <murrayc@murrayc.com>

	Fix the install.

	* goocanvas/goocanvasmm/Makefile.am: Do not mention wrap_init.h here,
	to avoid an error about a duplicate mention during install.

0.15:

2009-07-07  Murray Cumming  <murrayc@murrayc.com>

	Image: Added the scale-to-fit property.

	* goocanvas/src/libgda_signals.defs: Regenerated.